# crawlers

./: .gitignore  package-lock.json  pyproject.toml
TextRecognitionDataGenerator/trdg/: data_generator.py  run.py  string_generator.py
codes/assets/: similarity.csv  strokes.csv
codes/collect/dict/: generate_urls.py
codes/collect/poem/: generate_urls.py
codes/extract/: extract_books.py  extract_chars.py  extract_links.py
codes/methods/: compute_similarity_list.py  confusionset_pointer_net.py  ngrams.py  train_confusion.py  train_seq2seq.py  utils.py
codes/methods/datasets/: compute_similarity_list.py  generate_corpus.py  generate_post_processing_data.py  generate_training_data.py
codes/methods/embeddings/: bart.py  bert.py  cbow.py  radical_enhanced.py  skipgram.py
codes/methods/networks/: benchmark_vectorization.py  confusionset_pointer_net.py  confusionset_pointer_net_vectorized.py  seq2seq.py  vectorization_analysis.md
codes/methods/visualize/: loss.py
codes/preprocess/collect/: get.py  post.py  request.py
codes/preprocess/extract/: extract_chars.py  extract_vocab.py
codes/preprocess/transform/: transform_chars.py  transform_clc.py  transform_labels.py  val.txt  (+1 more)
codes/scripts/: train_confusion.sh  train_confusion_bert.sh  train_seq2seq.sh  train_seq2seq_bart.sh  train_seq2seq_norm.sh  train_seq2seq_v2.sh
scripts/: train_confusion.sh  train_seq2seq.sh  train_seq2seq_dec_add.sh  train_seq2seq_enc_add.sh  train_seq2seq_enc_atp_max.sh  train_seq2seq_enc_atp_mean.sh  train_seq2seq_enc_concat.sh  train_seq2seq_enc_res.sh  train_seq2seq_enc_sig.sh
(+9 files in other folders)
